--- a/web/chat.xhtml
+++ b/web/chat.xhtml
@@ -7,7 +7,7 @@
       xmlns:b="http://bootsfaces.net/ui"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-     <ui:composition template="/templates/template.xhtml">
+    <ui:composition template="/templates/template.xhtml">
         <ui:define name="titulo">Bate-Papo Virtual</ui:define>
         <ui:define name="conteudo">
             <h:form id="formListar">
@@ -18,7 +18,7 @@
 
                     </p:dataScroller>
                 </c:if>
-               
+
                 <c:if test="#{controleChat.usuario.nome == null}">
                     <h:form id="formUsuario">
                         <p:outputLabel value="Usuário"/>
@@ -30,6 +30,7 @@
                     </h:form>
 
                 </c:if>
+           
                 <c:if test="#{controleChat.usuario.nome != null}">
                     <div align="center">
                         <p:column headerText="Ação">
@@ -37,11 +38,10 @@
                                              icon="ui-icon-pencil"
                                              class="btn btn-danger"
                                              actionListener="#{controleChat.logoutChat()}"
-                                             update="formListar"/>
+                                             update=":formListar"/>
                         </p:column>
                     </div>
-                </c:if>
-                <c:if test="#{controleChat.usuario.nome != null}">
+
                     <h:panelGroup>
 
                         <br/><br/><br/><br/>
